--- a/chat4/index.html
+++ b/chat4/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>RHBot - Chat</title>
+  <title>Transporter Bot</title>
   <link rel="stylesheet" href="../assets/css/header.css">
   <style> /*-- Início da seção de estilos CSS */
 
