--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portal de Chatbots</title>
+  <title>Hub Chatbots</title>
 
   <!-- Caminhos relativos simples, compatíveis com GitHub Pages -->
   <link rel="stylesheet" href="assets/css/header.css" />
@@ -18,13 +18,13 @@
 <body>
   <header id="main-header">
     <div class="container">
-      <h1>Portal de Chatbots</h1>
+      <h1>Hub Chatbots</h1>
       <nav>
         <a href="/testechatbot/">Início</a>
         <a href="chat1_teddybot/index.html">Teddy Bot</a>
         <a href="chat2_milkbot/index.html">Milk Bot</a>
         <a href="chat3/index.html">Diamond Bot</a>
-        <a href="chat4/index.html">Chat 4 - Sem nome</a>
+        <a href="chat4/index.html">Transporter Bot</a>
         <a href="chat5-hortilar bot/hortlar.html">HortLar Bot</a>
       </nav>
     </div>
@@ -33,20 +33,20 @@
   <script src="assets/js/header.js"></script>
 
   <main class="chat-grid">
-    <a href="chat1_teddybot/index.html" class="chat-card" style="background-color: #005CA9;">
-      <div class="card-overlay"><h2>🐻 TeddyBot</h2></div>
+    <a href="chat1_teddybot/index.html" class="chat-card teddy" style="background-color: #005CA9;">
+      <div class="card-overlay"><h2>🐭 TeddyBot 🐹</h2></div>
     </a>
-    <a href="chat2_milkbot/index.html" class="chat-card" style="background-color: #005CA9;">
-      <div class="card-overlay"><h2>🥛 MilkBot</h2></div>
+    <a href="chat2_milkbot/index.html" class="chat-card milk" style="background-color: #005CA9;">
+      <div class="card-overlay"><h2>🐄 MilkBot 🥛</h2></div>
     </a>
-    <a href="chat3/index.html" class="chat-card" style="background-color: #005CA9;">
-      <div class="card-overlay"><h2>💎 DiamondBot</h2></div>
+    <a href="chat3/index.html" class="chat-card diamond" style="background-color: #005CA9;">
+      <div class="card-overlay"><h2>💎 DiamondBot 💎</h2></div>
     </a>
-    <a href="chat4/index.html" class="chat-card" style="background-color: #005CA9;">
-      <div class="card-overlay"><h2>💬 Chat 4</h2></div>
+    <a href="chat4/index.html" class="chat-card transporter" style="background-color: #005CA9;">
+      <div class="card-overlay"><h2>🚛 Transporter Bot 🚛</h2></div>
     </a>
-    <a href="chat5-hortilar bot/hortlar.html" class="chat-card" style="background-color: #005CA9;">
-      <div class="card-overlay"><h2>🌿 HortLar Bot</h2></div>
+    <a href="chat5-hortilar bot/hortlar.html" class="chat-card hortlar" style="background-color: #005CA9;">
+      <div class="card-overlay"><h2>🍉 HortLar Bot 🍖</h2></div>
     </a>
   </main>
 </body>
