--- a/chat3/index.html
+++ b/chat3/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Emoji de diamanete Diamond Bot</title>
+  <title>💎 Diamond Bot</title>
   <link rel="stylesheet" href="../assets/css/header.css">
   <style> /*-- Início da seção de estilos CSS */
 
@@ -146,7 +146,7 @@
     <!-- Container principal do chat -->
     <div id="chat">
       <!-- Cabeçalho com nome do bot -->
-      <div id="header">💎 Chat Bot</div>
+      <div id="header">💎 Diamond Bot</div>
       
       <!-- Área de mensagens (contém a mensagem inicial do bot) -->
       <div id="messages">
