--- a/chat5-hortilar bot/hortlar.html
+++ b/chat5-hortilar bot/hortlar.html
@@ -136,13 +136,13 @@
 <body>
     <header id="main-header">
         <div class="container">
-            <h1>Portal de Chatbots</h1>
+            <h1>Hub Chatbots</h1>
             <nav>
             <a href="../index.html">Início</a>
             <a href="../chat1_teddybot/index.html">Teddy Bot</a>
             <a href="../chat2_milkbot/index.html">Milk Bot</a>
             <a href="../chat3/index.html">Diamond Bot</a>
-            <a href="../chat4/index.html">Chat 4 - Sem nome</a>
+            <a href="../chat4/index.html">Transporter Bot</a>
             <a href="../chat5-hortilar bot/hortlar.html">HortLar Bot</a>
             </nav>
         </div>
@@ -154,7 +154,7 @@
     <!-- Container principal do chat -->
     <div id="chat">
       <!-- Cabeçalho com nome do bot -->
-      <div id="header">🍉HortLar 🍖</div>
+      <div id="header">🍉 HortLar 🍖</div>
       
       <!-- Área de mensagens (contém a mensagem inicial do bot) -->
       <div id="messages">
