--- a/chat2_milkbot/index.html
+++ b/chat2_milkbot/index.html
@@ -129,13 +129,13 @@
 <body>
     <header id="main-header">
         <div class="container">
-            <h1>Portal de Chatbots</h1>
+            <h1>Hub Chatbots</h1>
             <nav>
             <a href="../index.html">Início</a>
             <a href="../chat1_teddybot/index.html">Teddy Bot</a>
             <a href="../chat2_milkbot/index.html">Milk Bot</a>
             <a href="../chat3/index.html">Diamond Bot</a>
-            <a href="../chat4/index.html">Chat 4 - Sem nome</a>
+            <a href="../chat4/index.html">Transporter Bot</a>
             <a href="../chat5-hortilar bot/hortlar.html">HortLar Bot</a>
             </nav>
         </div>
