--- a/chat1_teddybot/index.html
+++ b/chat1_teddybot/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>RHBot - Chat</title>
+  <title>Teddy Bot</title>
   <link rel="stylesheet" href="../assets/css/header.css">
   <style>
     body {
@@ -121,13 +121,13 @@
 <body>
     <header id="main-header">
         <div class="container">
-            <h1>Portal de Chatbots</h1>
+            <h1>Hub Chatbots</h1>
             <nav>
             <a href="../index.html">Início</a>
             <a href="../chat1_teddybot/index.html">Teddy Bot</a>
             <a href="../chat2_milkbot/index.html">Milk Bot</a>
             <a href="../chat3/index.html">Diamond Bot</a>
-            <a href="../chat4/index.html">Chat 4 - Sem nome</a>
+            <a href="../chat4/index.html">Transporter Bot</a>
             <a href="../chat5-hortilar bot/hortlar.html">HortLar Bot</a>
             </nav>
         </div>
